Fix: fix text align paragraph code

--- a/homepage/style.css
+++ b/homepage/style.css
@@ -2,15 +2,11 @@ h2{
     text-align: center;
 }
 
-.first-paragraph{
+p{
     text-align:center;
 }
 
 .second-paragraph{
     font-size: 20px;
-    text-align:center;
-}
-
-.third-paragraph{
     text-align:center;
 }
